--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         .description {
             margin: 20px auto;
             font-size: 24px;
-            width: 80%;
+            width: 90%;
+            max-width: 800px;
             background: rgba(0, 0, 0, 0.7);
             padding: 20px;
             border-radius: 10px;
@@ -81,36 +82,37 @@
             box-shadow: 0 0 10px gold, 0 0 20px goldenrod;
         }
 
-        .magical-message {
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            font-size: 30px;
-            color: gold;
-            text-shadow: 0px 0px 10px gold, 0px 0px 20px goldenrod;
-            animation: fadeIn 3s forwards;
-            display: none;
-            text-align: center;
-            padding: 20px;
+        footer {
+            margin-top: 50px;
+            font-size: 14px;
+            color: #fff;
+            text-shadow: 0px 0px 5px #000;
             background: rgba(0, 0, 0, 0.8);
-            border-radius: 10px;
-            box-shadow: 0px 5px 15px rgba(255, 223, 0, 0.8);
-            z-index: 10;
-            width: auto;
-            max-width: 80%;
+            padding: 20px 10px;
+            width: 100%;
+            position: fixed;
+            bottom: 0;
+            left: 0;
         }
 
-        @keyframes fadeIn {
-            0% { opacity: 0; transform: scale(0.5); }
-            100% { opacity: 1; transform: scale(1); }
+        footer a {
+            color: gold;
+            text-decoration: none;
+            margin: 0 10px;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
     <header>Magical Wishing Well</header>
 
-    <div class="description">Welcome to the Magical Wishing Well. Toss a coin, make a wish, and watch the magic unfold!</div>
+    <div class="description">
+        Welcome to the Magical Wishing Well! This platform allows you to make wishes by adding tokens. 
+        Choose a token, make your payment (including UPI), and submit your wish.
+    </div>
 
     <div class="container">
         <button class="button" id="addTokenButton" onclick="showTokenOptions()">Add a Token</button>
@@ -130,8 +132,14 @@
 
     <div class="well-container"></div>
 
-    <p id="magicalMessage" class="magical-message">✨ Your wish has been granted. Believe in magic! ✨</p>
+    <footer>
+        Contact Us: <a href="mailto:manage9987@gmail.com">manage9987@gmail.com</a> |
+        <a href="#" onclick="showModal('terms')">Terms and Conditions</a> |
+        <a href="#" onclick="showModal('privacy')">Privacy Policy</a> |
+        <a href="#" onclick="showModal('refund')">Cancellation & Refund Policy</a>
+    </footer>
 
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <script>
         let tokenCount = 0;
 
@@ -148,9 +156,30 @@
             };
 
             if (tokenLinks[amount]) {
-                alert(`You selected ₹${amount} token. Redirecting to payment...`);
-                window.location.href = tokenLinks[amount];
-                document.getElementById('confirmPayment').style.display = 'block';
+                // Using Razorpay Payment Gateway
+                var options = {
+                    "key": "YOUR_RAZORPAY_KEY", // Enter your Razorpay key here
+                    "amount": amount * 100, // Amount in paise
+                    "currency": "INR",
+                    "name": "Magical Wishing Well",
+                    "description": "Make a Wish",
+                    "image": "https://example.com/your-logo.png",
+                    "handler": function(response) {
+                        alert("Payment successful! You can now make a wish.");
+                        confirmPayment();
+                    },
+                    "prefill": {
+                        "name": "",
+                        "email": "",
+                        "contact": ""
+                    },
+                    "theme": {
+                        "color": "#F37254"
+                    }
+                };
+                
+                var rzp1 = new Razorpay(options);
+                rzp1.open();
             } else {
                 alert("Invalid token amount.");
             }
@@ -176,12 +205,7 @@
                 alert(`Your wish "${wish}" is being fulfilled!`);
                 document.getElementById('wishInput').style.display = 'none';
                 document.getElementById('makeWishButton').style.display = 'none';
-                document.getElementById('magicalMessage').style.display = 'block';
-
-                setTimeout(() => {
-                    document.getElementById('magicalMessage').style.display = 'none';
-                    document.getElementById('addTokenButton').style.display = 'block';
-                }, 3000);
+                document.getElementById('addTokenButton').style.display = 'block';
             } else {
                 alert("Please add a token to make a wish.");
             }
