--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 localStorage.setItem("tokenBalance", tokenBalance + 1);
                 document.getElementById("tokenCount").textContent = ++tokenBalance;
                 alert("Redirecting to Razorpay...");
-                window.location.href = "https://rzp.io/rzp/2hn48gI";
+                window.location.href = "razorpay.me/@wishingwell";
             } else {
                 alert("Minimum amount is ₹10");
             }
